Fixed annotations for swagger
