# backend/api/apiErrors.go
@@ -1,47 +1,47 @@
 package api
 
-type ErrorResponse struct {
+type Errors struct {
 	Error string `json:"error" example:"Internal Server Error"`
 	Code  string `json:"code,omitempty" example:"INTERNAL_SERVER_ERROR"`
 }
 
 var (
-	ErrUnauthorized = ErrorResponse{
+	ErrUnauthorized = Errors{
 		Error: "Unauthorized",
 		Code:  "UNAUTHORIZED",
 	}
 
-	ErrSessionExpired = ErrorResponse{
+	ErrSessionExpired = Errors{
 		Error: "Session expired, please log in again.",
 		Code:  "SESSION_EXPIRED",
 	}
 
-	ErrInternalServer = ErrorResponse{
+	ErrInternalServer = Errors{
 		Error: "Internal Server Error",
 		Code:  "INTERNAL_SERVER_ERROR",
 	}
 
-	ErrInvalidRequest = ErrorResponse{
+	ErrInvalidRequest = Errors{
 		Error: "Invalid request",
 		Code:  "INVALID_REQUEST",
 	}
 
-	ErrForbidden = ErrorResponse{
+	ErrForbidden = Errors{
 		Error: "Forbidden",
 		Code:  "FORBIDDEN",
 	}
 
-	ErrNotFound = ErrorResponse{
+	ErrNotFound = Errors{
 		Error: "Resource not found",
 		Code:  "NOT_FOUND",
 	}
 
-	ErrConflict = ErrorResponse{
+	ErrConflict = Errors{
 		Error: "Conflict",
 		Code:  "CONFLICT",
 	}
 
-	ErrRateLimited = ErrorResponse{
+	ErrRateLimited = Errors{
 		Error: "Too many requests",
 		Code:  "RATE_LIMITED",
 	}
